[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/LevelEnd.gd" type="Script" id=1]

[node name="LevelEnd" type="Panel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 252.0
margin_bottom = 140.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 244.0
margin_bottom = 132.0

[node name="Header" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 240.0
margin_bottom = 14.0
text = "Level Complete"
align = 1

[node name="LevelScore" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 240.0
margin_bottom = 59.0
size_flags_vertical = 3
text = "Level Score: 0"
align = 1
valign = 1

[node name="TotalScore" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 240.0
margin_bottom = 104.0
size_flags_vertical = 3
text = "Total Score: 0"
align = 1
valign = 1

[node name="NextLevel" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
margin_left = 80.0
margin_top = 108.0
margin_right = 160.0
margin_bottom = 128.0
size_flags_horizontal = 4
text = "Next Level"

[node name="Retry" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 97.0
margin_top = 108.0
margin_right = 142.0
margin_bottom = 128.0
size_flags_horizontal = 4
text = "Retry"

[connection signal="pressed" from="MarginContainer/VBoxContainer/NextLevel" to="." method="_on_NextLevel_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
